2005-03-07  Don Allingham  <don@gramps-project.org>
	* src/RelLib.py: more documentation

2005-03-07 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (post_load): Upgrade even if no callback.

2005-03-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsBSDDB.py: display upgrade messages to stdout

2005-03-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: add upgrade to version 3 for new Name type
	* src/NameEdit.py: add date editor field
	* src/ReadXML.py: read date field attached to a name
	* src/WriteXML.py: write date field attached to a name
	* src/RelLib.py: add date field to Name
	* src/gramps.glade: add date editor field to Name Editor dialog

2005-03-06 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditSource.py (display_references): List source's references
	from personal and family gallery objects.

2005-03-04 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GenericFilter.py (HasAttribute.apply): Make work when no value
	is given; (HasFamilyAttribute.apply): Make work when no value is given.

2005-03-03 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GenericFilter.py (HasAttribute.apply): Fix the rule.
	(HasFamilyAttribute.apply): Fix the rule.
	* src/Marriage.py (on_update_attr_clicked,on_add_attr_clicked):
	Pass the window to the attribute editor.

2005-03-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ChooseParents.py: use integers instead of strings for 
	relationship types
	* src/PedView.py: use integers instead of strings for 
	relationship types
	* src/ReadGedcom.py: use integers instead of strings for 
	relationship types
	* src/ReadXML.py: use integers instead of strings for 
	relationship types
	* src/RelLib.py: use integers instead of strings for 
	relationship types
	* src/SelectChild.py: use integers instead of strings for 
	relationship types
	* src/WriteXML.py: use integers instead of strings for 
	relationship types
	* src/const.py.in: use integers instead of strings for 